--- a/frontend/deno.json
+++ b/frontend/deno.json
@@ -27,6 +27,7 @@
     "@/": "./src/",
     "@swc/counter": "npm:@swc/counter@0.1.3",
     "styled-jsx": "npm:styled-jsx@5.1.1",
+    "timeago.js": "npm:timeago.js@^4.0.2",
     "busboy": "npm:busboy@1.6.0"
   },
   "tasks": {
