Rebrand to KeyFate. Get secret emails working

--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -5,6 +5,7 @@
     ]
   },
   "imports": {
+    "@sendgrid/mail": "npm:@sendgrid/mail@^8.1.4",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.0"
   }
 }
