Implement Shamir's secret sharing
Put shares in local storage temporarily

Begin scaffolding tests with Vitetest

Add ability to view and delete the server_share

Fix many build errors

Skip deleted secrets from emailing and show different UI

fix: change min check-in days

Clean up auth forms

--- a/supabase/Makefile
+++ b/supabase/Makefile
@@ -1,4 +1,4 @@
-.PHONY: dev stop help status test
+.PHONY: dev stop help status test gen-types
 
 dev:
 	supabase start
@@ -14,3 +14,6 @@ status:
 
 test:
 	supabase test
+
+gen-types:
+	npx supabase gen types typescript --local > database.types.ts
