--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # Environment variables
 .env
-.env.local
-.env.development.local
 .env.test.local
-.env.production.local
+.env.*.local
 
 # dependencies
 /node_modules
@@ -23,9 +21,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local env files
-.env*.local
 
 # typescript
 *.tsbuildinfo
