--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -31,7 +31,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "vitest.config.mts"  ],
   "exclude": [
     "node_modules"
   ]
