--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@paddle/paddle-js": "^1.4.1",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -34,6 +36,7 @@
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
+    "ogl": "^1.0.11",
     "pg": "^8.13.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
