Fix several bugs
- Move encryption to server-side
- Fix local development of reminder processing
- Begin work on deployment via Firebase App Hosting
- Add helpers functions for serving functions and generating DB types
- Improve query speeds that use dynamic user ID

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 # misc
 .DS_Store
 *.pem
+*.tmp
 
 # debug
 npm-debug.log*
@@ -24,9 +25,12 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts 
+next-env.d.ts
 
 # supabase
 supabase/config.toml
 supabase/migrations/20241207004612_cron_dev.sql
 supabase/prod-migrations/*
+
+.firebaserc
+.envrc
