--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_SITE_URL=https://keyfate.com
 NEXT_PUBLIC_COMPANY=KeyFate
-NEXT_PUBLIC_PARENT_COMPANY="Aviat, LLC"
-NEXT_PUBLIC_SUPPORT_EMAIL=support@aviat.io
+NEXT_PUBLIC_PARENT_COMPANY="Example"
+NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
