Add build and test GitHub Actions

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -7,7 +7,15 @@ dev:
 	pnpm dev
 
 copy-types:
-	cd ../supabase && supabase gen types typescript --local > ../frontend/src/types/database.types.ts
+	@if [ -d ../supabase ]; then \
+		cd ../supabase && supabase gen types typescript --local > ../frontend/src/types/database.types.ts; \
+	elif [ -f ../database.types.ts ]; then \
+		echo "Using existing database types from root directory"; \
+		cp ../database.types.ts src/types/database.types.ts; \
+	else \
+		echo "No database types available, creating empty file"; \
+		touch src/types/database.types.ts; \
+	fi
 
 build: install copy-types
 	pnpm build
