Load env vars at run time instead of build

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,46 +14,10 @@ steps:
       - 'NEXT_PUBLIC_SUPABASE_URL=${_NEXT_PUBLIC_SUPABASE_URL}'
       - '--build-arg'
       - 'NEXT_PUBLIC_SUPABASE_ANON_KEY=${_NEXT_PUBLIC_SUPABASE_ANON_KEY}'
-      - '--build-arg'
-      - 'ENCRYPTION_KEY=${_ENCRYPTION_KEY}'
-      - '--build-arg'
-      - 'GOOGLE_CLIENT_ID=${_GOOGLE_CLIENT_ID}'
-      - '--build-arg'
-      - 'GOOGLE_CLIENT_SECRET=${_GOOGLE_CLIENT_SECRET}'
-      - '--build-arg'
-      - 'SUPABASE_ANON_KEY=${_SUPABASE_ANON_KEY}'
-      - '--build-arg'
-      - 'SUPABASE_SERVICE_ROLE_KEY=${_SUPABASE_SERVICE_ROLE_KEY}'
-      - '--build-arg'
-      - 'NEXT_PUBLIC_GRAPHQL_URL=${_NEXT_PUBLIC_GRAPHQL_URL}'
-      - '--build-arg'
-      - 'DB_URL=${_DB_URL}'
       - '--tag'
-      - 'gcr.io/$PROJECT_ID/keyfate-frontend'
-      - '.'
+      - '${_IMAGE_TAG}'
+      - 'frontend'
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/keyfate-frontend']
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-      - 'run'
-      - 'deploy'
-      - 'keyfate-frontend'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/keyfate-frontend'
-      - '--platform'
-      - 'managed'
-      - '--region'
-      - 'us-central1'
-      - '--allow-unauthenticated'
-      - '--port'
-      - '3000'
-      - '--memory'
-      - '512Mi'
-      - '--cpu'
-      - '1'
-      - '--min-instances'
-      - '0'
-      - '--max-instances'
-      - '10'
+    args: ['push', '${_IMAGE_TAG}']
 images:
-  - 'gcr.io/$PROJECT_ID/keyfate-frontend'
+  - '${_IMAGE_TAG}'
