Fix Google OAuth redirect on login

--- a/frontend/.env.staging
+++ b/frontend/.env.staging
@@ -1,5 +1,6 @@
 # Staging Environment Variables
-NEXT_PUBLIC_SITE_URL=https://dev.keyfate.com
+NEXT_PUBLIC_SITE_URL=https://staging.keyfate.com
+NEXT_PUBLIC_SITE_REDIRECT_URL=https://staging.keyfate.com/auth/callback
 NEXT_PUBLIC_COMPANY=KeyFate
 NEXT_PUBLIC_PARENT_COMPANY=Aviat
 NEXT_PUBLIC_SUPPORT_EMAIL=support@aviat.io
