--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_SITE_URL=https://keyfate.com
+NEXT_PUBLIC_SITE_URL=localhost:3000
+NEXT_PUBLIC_SITE_REDIRECT_URL=localhost:3000/auth/v1/callback
 NEXT_PUBLIC_COMPANY=KeyFate
 NEXT_PUBLIC_PARENT_COMPANY="Example"
 NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
