--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_SITE_URL=https://keyfate.com
+NEXT_PUBLIC_SITE_REDIRECT_URL=https://keyfate.com/auth/callback
 NEXT_PUBLIC_COMPANY=KeyFate
 NEXT_PUBLIC_PARENT_COMPANY="Aviat, LLC"
 NEXT_PUBLIC_SUPPORT_EMAIL=support@aviat.io
