Improve some logging and tests

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,6 @@
-NEXT_PUBLIC_SITE_URL=localhost:3000
-NEXT_PUBLIC_SITE_REDIRECT_URL=localhost:3000/auth/v1/callback
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_REDIRECT_URL=http://localhost:3000/auth/callback
 NEXT_PUBLIC_COMPANY=KeyFate
 NEXT_PUBLIC_PARENT_COMPANY="Example"
 NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
+NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
