Update type file name to make it compatible with supabase function serving locally

--- a/supabase/Makefile
+++ b/supabase/Makefile
@@ -17,11 +17,11 @@ test:
 
 gen-types:
 	@echo "Generating database types..."
-	npx supabase gen types typescript --local > database.types.ts
+	npx supabase gen types typescript --local > types.ts
 	@echo "Copying types to functions shared directory..."
-	cp database.types.ts functions/_shared/database.types.ts
+	cp types.ts functions/_shared/types.ts
 	@echo "Copying types to root directory..."
-	cp database.types.ts ../database.types.ts
+	cp types.ts ../types.ts
 	@echo "Database types generated and copied successfully!"
 
 functions-serve:
