feat: add database seeding and verification targets to Makefile
- Add reset-and-seed target for full database reset with test data
- Add verify-seed target to check database state integrity
- Include helpful error messages for missing service role key
- Add section comments for better organization
- Update .PHONY declaration with new targets
- Provide clear login credentials for test users

--- a/supabase/Makefile
+++ b/supabase/Makefile
@@ -1,5 +1,6 @@
-.PHONY: dev stop help status test gen-types
+.PHONY: dev stop help status test gen-types reset-and-seed verify-seed functions-serve
 
+# Core Supabase commands
 dev:
 	supabase start
 
@@ -15,6 +16,7 @@ status:
 test:
 	supabase test
 
+# Type generation
 gen-types:
 	@echo "Generating database types..."
 	npx supabase gen types typescript --local > database.types.ts
@@ -24,5 +26,42 @@ gen-types:
 	cp database.types.ts ../database.types.ts
 	@echo "Database types generated and copied successfully!"
 
+# Seed database with test data
+reset-and-seed:
+	@echo "🚀 Full database reset and seed process..."
+	@echo ""
+	@echo "Step 1: Resetting database with migrations and seed.sql..."
+	supabase db reset
+	@echo ""
+	@echo "Step 2: Creating auth users with specific UUIDs..."
+	@if [ -z "$$SUPABASE_SERVICE_ROLE_KEY" ]; then \
+		echo "❌ Error: SUPABASE_SERVICE_ROLE_KEY environment variable is required"; \
+		echo "💡 Get it from: Supabase Dashboard > Settings > API > service_role key"; \
+		echo "💡 Then run: SUPABASE_SERVICE_ROLE_KEY=your_key make reset-and-seed"; \
+		echo "💡 Or use direnv: create .envrc with 'export SUPABASE_SERVICE_ROLE_KEY=your_key'"; \
+		exit 1; \
+	fi
+	@cd ../frontend && node create-seed-users.js
+	@echo ""
+	@echo "Step 3: Verifying seed data..."
+	@$(MAKE) verify-seed
+	@echo ""
+	@echo "🎉 Seed setup complete! You can now login with:"
+	@echo "  📧 ceo@aviat.io / password123 (3 secrets with special timing)"
+	@echo "  📧 john.doe@example.com / password123 (free tier - 1 secret)"
+	@echo "  📧 alice.smith@company.com / password123 (pro tier - 4 secrets)"
+	@echo "  📧 bob.wilson@startup.io / password123 (pro tier - 2 secrets)"
+
+# Verify seed data integrity
+verify-seed:
+	@echo "🔍 Verifying database state..."
+	@echo ""
+	@echo "Auth Users:"
+	@psql $(shell supabase status --output env | grep DB_URL | cut -d'=' -f2-) -c "SELECT id, email FROM auth.users ORDER BY email;" 2>/dev/null || echo "No auth users found"
+	@echo ""
+	@echo "User-Secret Summary:"
+	@psql $(shell supabase status --output env | grep DB_URL | cut -d'=' -f2-) -c "SELECT u.email, COUNT(s.id) as secrets, ut.tier_name FROM auth.users u LEFT JOIN secrets s ON u.id = s.user_id LEFT JOIN user_tiers ut ON u.id = ut.user_id GROUP BY u.email, ut.tier_name ORDER BY u.email;" 2>/dev/null || echo "Failed to query data"
+
+# Development functions
 functions-serve:
 	supabase functions serve --env-file functions/.env.development.local
