--- a/.envrc.example
+++ b/.envrc.example
@@ -3,6 +3,9 @@
 
 export SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
+# Encryption key for development (32 bytes for AES-256-GCM)
+export ENCRYPTION_KEY=12345678901234567890123456789012
+
 # Optional: Add other development environment variables
 # export NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
 # export NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
