Clean up environment variables

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,7 @@
-NEXT_PUBLIC_SITE_URL=https://keyfate.com
-NEXT_PUBLIC_SITE_REDIRECT_URL=https://keyfate.com/auth/callback
-NEXT_PUBLIC_COMPANY=KeyFate
-NEXT_PUBLIC_PARENT_COMPANY="Aviat, LLC"
-NEXT_PUBLIC_SUPPORT_EMAIL=support@aviat.io
+NEXT_PUBLIC_SITE_URL=https://yourdomain
+NEXT_PUBLIC_SITE_REDIRECT_URL=https://yourdomain/auth/callback
+NEXT_PUBLIC_COMPANY="Your Company Name"
+NEXT_PUBLIC_PARENT_COMPANY="Your Parent Company"
+NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
+NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_ANON_KEY
+NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project-id.supabase.co
