--- a/frontend/.env.staging
+++ b/frontend/.env.staging
@@ -1,6 +1,6 @@
 # Staging Environment Variables
-NEXT_PUBLIC_SITE_URL=https://staging.keyfate.com
-NEXT_PUBLIC_SITE_REDIRECT_URL=https://staging.keyfate.com/auth/callback
-NEXT_PUBLIC_COMPANY=KeyFate
-NEXT_PUBLIC_PARENT_COMPANY=Aviat
-NEXT_PUBLIC_SUPPORT_EMAIL=support@aviat.io
+NEXT_PUBLIC_SITE_URL=https://staging.yourdomain.com
+NEXT_PUBLIC_SITE_REDIRECT_URL=https://staging.yourdomain.com/auth/callback
+NEXT_PUBLIC_COMPANY="Your Company"
+NEXT_PUBLIC_PARENT_COMPANY="Your Parent Company"
+NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
