--- a/frontend/.env.staging
+++ b/frontend/.env.staging
@@ -4,3 +4,4 @@ NEXT_PUBLIC_SITE_REDIRECT_URL=https://staging.yourdomain.com/auth/callback
 NEXT_PUBLIC_COMPANY="Your Company"
 NEXT_PUBLIC_PARENT_COMPANY="Your Parent Company"
 NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
