--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -4,3 +4,4 @@ NEXT_PUBLIC_COMPANY="Your Company"
 NEXT_PUBLIC_PARENT_COMPANY="Your Parent Company"
 NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
 NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
