--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -5,3 +5,4 @@ NEXT_PUBLIC_PARENT_COMPANY="Your Parent Company"
 NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
 NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_ANON_KEY
 NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project-id.supabase.co
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
