--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
-NEXT_PUBLIC_SITE_REDIRECT_URL=http://localhost:3000/auth/callback
 NEXT_PUBLIC_COMPANY="Your Company"
 NEXT_PUBLIC_PARENT_COMPANY="Your Parent Company"
-NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
-NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-local-supabase-anon-key
+NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
+NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
