--- a/frontend/.env.staging
+++ b/frontend/.env.staging
@@ -1,7 +1,7 @@
-# Staging Environment Variables
-NEXT_PUBLIC_SITE_URL=https://staging.yourdomain.com
-NEXT_PUBLIC_SITE_REDIRECT_URL=https://staging.yourdomain.com/auth/callback
 NEXT_PUBLIC_COMPANY="Your Company"
 NEXT_PUBLIC_PARENT_COMPANY="Your Parent Company"
-NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
+NEXT_PUBLIC_SITE_URL=https://staging.yourdomain.com
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-staging-anon-key
+NEXT_PUBLIC_SUPABASE_URL=https://your-staging-supabase-project-id.supabase.co
+NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
